Corrected so app scrolling doesn't cause issues on smalll screens

--- a/src/styles/navigator.css
+++ b/src/styles/navigator.css
@@ -40,6 +40,7 @@
   min-height: 0;
   overflow: auto;
   padding-bottom: 10px;
+  -webkit-overflow-scrolling: touch;
 }
 
 .navEmpty {
